# hallowana

./: CONTRIBUTING.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md
genesis/: bootstrap-validators.json  genesis-config.yaml
scripts/: build-all.sh  install-deps.sh  start-validator.sh
sdk/: Cargo.toml
sdk/src/: boo_token.rs  lib.rs
